[package]
name = "_cryptopyx"
# Update pyproject version too
version = "0.1.2"
description = "Rust backend for the cryptopyx Python package"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "_cryptopyx"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
anstyle = "1.0.13"
colored = "3.0.0"

[dependencies.clap]
version = "4.5.53"
features = ["cargo"]

[dependencies.pyo3]
version = "0.27.1"
features = ["abi3-py310", "extension-module"]
