[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cryptopyx"
# The package itself requires python 3.10, but doc dependencies require python 3.11
requires-python = ">=3.10"
# Update cargo version too
version = "0.1.2"
description = "A python cryptography package written in Rust made for speed."
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["cryptography", "cipher", "encryption", "decryption", "security"]
authors = [
  { name="Siqi Yan", email="syan235711@gmail.com" }
]

# Dependencies
dependencies = [
  "click >=8.0",
]

# Classifiers
classifiers = [
    # Topics
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",

    # Languages
    "Natural Language :: English",

    # Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    # Development Status
    "Development Status :: 5 - Production/Stable",

    # Python Versions
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",

    # Rust Implementation
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    
    # OS
    # This code is OS independent as it only depends on Python and Rust standard libraries
    "Operating System :: OS Independent",

    # Typing
    "Typing :: Stubs Only",
]

[dependency-groups]
# Dev dependencies
dev = [
  "maturin==1.10.2",
  "ruff==0.14.6",
  "pytest==9.0.1",
  "pytest-benchmark==5.2.3",
  "codespell==2.4.1"
]

# Doc dependencies, requires python 3.11
docs = [
  "sphinxawesome-theme==5.3.2",
  "sphinx_design==0.6.1",
  "sphinx==8.2.3",
]

[project.urls]
# Urls
# TODO: add docs link
Repository = "https://github.com/syan212/CryptoPyX"
Issues = "https://github.com/syan212/CryptoPyX/issues"
Changelog = "https://github.com/syan212/CryptoPyX/blob/main/CHANGELOG.md"

# CLI
[project.scripts]
cryptopyx = "cryptopyx.cli.main:cli"

# Maturin config
[tool.maturin]
python-source = "python"
bindings = "pyo3"
exclude = [
  # Git and GitHub
  '.git*', '.github/**', 
  
  # Dev files and directories
  'benchmarks/**', 'tests/**', 'scripts/**', 'utils/**', 'docs/**', 
  
  # Miscellaneous
  '.editorconfig', 'requirements-dev.txt', '.ruff.toml', 
  '.rustfmt.toml', 'roadmap.md', 'Cargo.lock', 'CHANGELOG.md',
]
strip = true
features = ["pyo3/extension-module"]
module-name = "cryptopyx._cryptopyx"