[build-system]
requires = ["maturin<2.0,>=1.0"]
build-backend = "maturin"

[project]
name = "cryptopyx"
# The package itself requires python 3.10, but doc dependencies require python 3.11
requires-python = ">=3.10"
# Update cargo version too
version = "0.2.0"
description = "A python cryptography package written in Rust made for speed."
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["cryptography", "cipher", "encryption", "decryption", "security"]
authors = [
  { name="Siqi Yan", email="syan235711@gmail.com" }
]

# Dependencies
dependencies = []

# Classifiers
classifiers = [
    # Topics
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",

    # Languages
    "Natural Language :: English",

    # Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    # Development Status
    "Development Status :: 5 - Production/Stable",

    # Python Versions
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",

    # Rust Implementation
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    
    # OS
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",

    # Typing
    "Typing :: Stubs Only",
]

[dependency-groups]
# Dev dependencies
dev = [
  "maturin==1.11.5",
  "ruff==0.14.14",
  "pytest==9.0.2",
  "pytest-benchmark==5.2.3",
]

# Doc dependencies, requires python 3.11
docs = [
  "sphinxawesome-theme==6.0.0; python_version >= '3.11'",
  "sphinx_design==0.6.1; python_version >= '3.11'",
  "sphinx==8.2.3; python_version >= '3.11'",
]

[project.urls]
# Urls
# TODO: add docs link
Repository = "https://github.com/syan212/CryptoPyX"
Issues = "https://github.com/syan212/CryptoPyX/issues"
Changelog = "https://github.com/syan212/CryptoPyX/blob/main/CHANGELOG.md"

# CLI
[project.scripts]
cryptopyx = "cryptopyx.cli:parse"

# Maturin config
[tool.maturin]
python-source = "python"
bindings = "pyo3"
exclude = [
  # Git and GitHub
  '.git*', '.github/**', 
  
  # Dev files and directories
  'benches/**', 'tests/**', 'scripts/**', 'utils/**', 'docs/**', 
  
  # Miscellaneous
  '.editorconfig', '.rustfmt.toml', 'roadmap.md', 'Cargo.lock', 'CHANGELOG.md',
]
auditwheel = "repair"
strip = true
features = ["pyo3/extension-module"]
module-name = "cryptopyx._cryptopyx"

# Pytest config
[tool.pytest]
minversion = "9.0"
testpaths = ["benches", "tests"]
python_files = ["*_test.py", "*_benches.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "bench_*"]
addopts = [
    "-W error",
]

# Codespell config
[tool.codespell]
skip = "./docs/_build/**"

# uv config
[tool.uv]
required-version = ">=0.9.18"

# Ruff config
[tool.ruff]
target-version = "py310"
preview = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except (no bare except:)
    "C4",     # flake8-comprehensions
    "C90",    # mccabe complexity
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "Q",      # flake8-quotes
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "PERF",   # perflint (performance)
    "ANN",    # flake8-annotations
    "ARG",    # flake8-unused-arguments
    "FBT",    # flake8-boolean-trap
    "RET",    # flake8-return
    "TC",     # flake8-type-checking
]

ignore = [
    "E501" # Delegate to formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN", # No annotations
    "S101" # Allow asssertations
]
"benches/*" = [
    "ANN", # No annotations
    "S311" # Allow use of random in benchmarks
]
"utils/encodings.py" = [
    "S311" # Allow use of random in utils/encodings.py
]

[tool.ruff.lint.mccabe]
max-complexity = 10  # Maximum cyclomatic complexity

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
known-first-party = ["cryptopyx"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.pylint]
max-nested-blocks = 3  # Maximum nested block depth (PLR1702)

# Formatter
[tool.ruff.format]
line-ending = "lf"
quote-style = "single"
indent-style = "space"
